src/snapshots/tptp__tfx__tests__tfx_quantified_type.snap
---
source: src/tfx.rs
expression: parsed
---
QuantifiedType {
    bound: VariableList(
        [
            Typed(
                TypedVariable {
                    variable: Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                    typ: Defined(
                        DefinedType(
                            AtomicDefinedWord(
                                DollarWord(
                                    LowerWord(
                                        "tType",
                                    ),
                                ),
                            ),
                        ),
                    ),
                },
            ),
            Untyped(
                Variable(
                    UpperWord(
                        "B",
                    ),
                ),
            ),
        ],
    ),
    typ: Atomic(
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    ),
}
