src/snapshots/tptp__tfx__tests__tfx_system_atomic-3.snap
---
source: src/tfx.rs
expression: parsed
---
Function(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "system",
                ),
            ),
        ),
    ),
    Arguments(
        [
            Logic(
                Unitary(
                    Atomic(
                        Defined(
                            DefinedAtomic(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
