src/snapshots/tptp__tfx__tests__tfx_system_atomic.snap
---
source: src/tfx.rs
expression: parsed
---
Constant(
    SystemConstant(
        SystemFunctor(
            AtomicSystemWord(
                DollarDollarWord(
                    LowerWord(
                        "system",
                    ),
                ),
            ),
        ),
    ),
)
