src/snapshots/tptp__tfx__tests__tfx_top_level_type-3.snap
---
source: src/tfx.rs
expression: parsed
---
NonAtomic(
    Mapping(
        MappingType {
            domain: Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ),
            range: Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        },
    ),
)
