src/snapshots/tptp__tfx__tests__tfx_type_arguments-3.snap
---
source: src/tfx.rs
expression: parsed
---
TypeArguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
        Constant(
            TypeConstant(
                TypeFunctor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
    ],
)
