src/snapshots/tptp__tfx__tests__tfx_type_arguments.snap
---
source: src/tfx.rs
expression: parsed
---
TypeArguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    ],
)
