src/snapshots/tptp__tfx__tests__tfx_typed_variable.snap
---
source: src/tfx.rs
expression: parsed
---
TypedVariable {
    variable: Variable(
        UpperWord(
            "X",
        ),
    ),
    typ: Variable(
        Variable(
            UpperWord(
                "A",
            ),
        ),
    ),
}
