src/snapshots/tptp__tfx__tests__tfx_unary_formula.snap
---
source: src/tfx.rs
expression: parsed
---
Infix(
    InfixUnary {
        left: Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
        op: InfixInequality,
        right: Variable(
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
        ),
    },
)
