src/snapshots/tptp__tfx__tests__tfx_unit_formula-3.snap
---
source: src/tfx.rs
expression: parsed
---
Unary(
    Prefix(
        PrefixUnary {
            op: UnaryConnective,
            formula: Unitary(
                Atomic(
                    Defined(
                        DefinedAtomic(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
