src/snapshots/tptp__tfx__tests__tfx_unit_formula-5.snap
---
source: src/tfx.rs
expression: parsed
---
DefinedInfix(
    DefinedInfix {
        left: Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
        op: DefinedInfixPred(
            InfixEquality,
        ),
        right: Variable(
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
        ),
    },
)
