src/snapshots/tptp__tfx__tests__tfx_unit_formula.snap
---
source: src/tfx.rs
expression: parsed
---
Unitary(
    Atomic(
        Defined(
            DefinedAtomic(
                Constant(
                    DefinedConstant(
                        DefinedFunctor(
                            AtomicDefinedWord(
                                DollarWord(
                                    LowerWord(
                                        "true",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
