src/snapshots/tptp__tfx__tests__tfx_unitary_formula-3.snap
---
source: src/tfx.rs
expression: parsed
---
Atomic(
    Defined(
        DefinedAtomic(
            Constant(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "true",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
